--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
   padding: 20px;
 }
 
-button.start {
+button.trigger {
   /*font-size: 30px;*/
   cursor: pointer;
   font-family: Helvetica, Sans-serif;
